<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin16"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_margin="@dimen/margin16"
        android:text="@string/next_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/nextRv"
            app:layoutManager=".helper.lib.PeekingLinearLayoutManager"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="H,2:1"/>

        <TextView
            android:id="@+id/nextNotFound"
            android:visibility="gone"
            android:text="@string/no_item_found"
            android:gravity="center"
            app:layout_constraintDimensionRatio="H,2:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_margin="@dimen/margin16"
        android:text="@string/last_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lastRv"
            app:layoutManager=".helper.lib.PeekingLinearLayoutManager"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="H,2:1"/>

        <TextView
            android:id="@+id/lastNotFound"
            android:visibility="gone"
            android:text="@string/no_item_found"
            android:gravity="center"
            app:layout_constraintDimensionRatio="H,2:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/layout_loading"/>

</LinearLayout>